--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "huddle-landing-page",
+  "name": "blog-preview-card",
   "private": true,
   "sideEffects": false,
   "type": "module",
